# nugget

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.MD  DECISIONS.md  IMPLEMENTATION.md  IMPLEMENTATIONS.MD  PLAN-NUGGET.md  PLAN.md  PRODUCT-DECISIONS.md  PRODUCT-NUGGET.md
.sageox/: .repo_019d0840-3651-7098-9b9d-327863cd9793  README.md  config.json
archive-decisions/: PLAN-NUGGET.md
crates/nugget-capture/: Cargo.toml
crates/nugget-capture/src/: lib.rs
crates/nugget-cli/: Cargo.toml
crates/nugget-cli/src/: main.rs
crates/nugget-clipboard/: Cargo.toml
crates/nugget-clipboard/src/: lib.rs
crates/nugget-core/: Cargo.toml
crates/nugget-core/src/: error.rs  frontmatter.rs  lib.rs  types.rs
crates/nugget-core/src/snapshots/: nugget_core__frontmatter__tests__parse_well_formed.snap  nugget_core__frontmatter__tests__serialize.snap
crates/nugget-import/: Cargo.toml
crates/nugget-import/src/: lib.rs
crates/nugget-inbox/: Cargo.toml
crates/nugget-inbox/src/: lib.rs
crates/nugget-mcp/: Cargo.toml
crates/nugget-mcp/src/: lib.rs
crates/nugget-store/: Cargo.toml
crates/nugget-store/src/: brain.rs  file.rs  lib.rs
