[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
insta = { version = "1.46", features = ["yaml", "redactions"] }
