[workspace]
members = [
    "crates/nugget-core",
    "crates/nugget-store",
    "crates/nugget-inbox",
    "crates/nugget-capture",
    "crates/nugget-mcp",
    "crates/nugget-import",
    "crates/nugget-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
