[package]
name = "nugget-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
