[package]
name = "nugget-import"
version = "0.1.0"
edition = "2021"

[dependencies]
nugget-core = { path = "../nugget-core" }
nugget-store = { path = "../nugget-store" }
nugget-inbox = { path = "../nugget-inbox" }
walkdir = "2"
regex = "1"
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
